--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
     background: rgba(0, 0, 0, 0.7);
     width: 100%;
     height: 138px;
-    margin-bottom: -45px;
+    margin-bottom: 1px;
 }
 main {
     background: url(img/banner.jpg);
@@ -222,6 +222,15 @@ footer {
         justify-content: space-between;
         align-items: center;
     }
+    .Banner {
+        position: absolute;
+        display: block;
+        bottom: 450px;
+        background: rgba(0, 0, 0, 0.7);
+        width: 100%;
+        height: 138px;
+        margin-bottom: -280px;
+    }
 
     /* Banner */
     main {
@@ -249,7 +258,28 @@ footer {
     header {
         max-width: 100%;
         height: 100px;
-        background-color: #696969;
+        background-color: #000000;
+    }
+    .Banner .Container h1 {
+        color: var(--brancoLayout);
+        font-size: 3em;
+        font-family:monospace;
+        margin-top: -20px;
+    }
+    .Banner .Container h2 {
+        color: var(--brancoLayout);
+        font-size: 1.5em;
+        font-family:monospace;
+        margin-top: 15px;
+    }
+    .Banner {
+        position: absolute;
+        display: block;
+        bottom: 450px;
+        background: rgba(0, 0, 0, 0.7);
+        width: 100%;
+        height: 138px;
+        margin-bottom: 337px;
     }
 
     label {
@@ -259,9 +289,10 @@ footer {
     }
 
     #logo img {
-        width: 60px;
-        height: 50px;
-        margin: 10px 0px 0px 0px;
+        width: 70px;
+        height: 70px;
+        margin: 20px 0px 0px 0px;
+        margin-left:30px;
     }
 
     nav ul {
@@ -288,6 +319,15 @@ footer {
     /* Layout */
     .Container {
         max-width: 960px;
+    }
+    .Banner {
+        position: absolute;
+        display: block;
+        bottom: 450px;
+        background: rgba(0, 0, 0, 0.7);
+        width: 100%;
+        height: 138px;
+        margin-bottom: 80px;
     }
 
     /* Cabeçalho */
