--- a/style.css
+++ b/style.css
@@ -62,20 +62,20 @@ section {
 .Card {
 margin-top: 30px;
 width: 338px;
-height:530px;
+height:550px;
 background-color: #e8e8e8;
 border: 2px solid var(--cinzaTexto);
-border-radius: 29px;
+border-radius: 30px;
 text-align:center;
-margin-left: 19px;
+margin-left: 3px;
 }
 
 .Card img {
  border-radius: 25px 25px 0px 0px;
  width: 330px;
  height: 320px;
- margin-left: -1.9vh;
- margin-top: -7vh;
+ margin-left: -0.2vh;
+ margin-top: 0.2vh;
 }
 
 .Card p {
@@ -85,13 +85,14 @@ margin-left: 19px;
 }
 /* Estilos para o botão no Card */
 .Card button {
-    background-color: #007bff;
+    background-color: #989898;
     color: white;
     border: none;
     border-radius: 19px;
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 17px;
     cursor: pointer;
+    
 }
 
 .Card button:hover {
@@ -150,10 +151,10 @@ main {
     margin-top: 15px;
 }
 ul li {
-    padding-top: 15px; /* Adiciona espaço acima de cada item da lista */
+    padding-top: 10px; /* Adiciona espaço acima de cada item da lista */
     padding-bottom: 17px; /* Adiciona espaço abaixo de cada item da lista */
     font-family:initial;
-    font-size: 18px;
+    font-size: 22px;
     
 }
 
@@ -245,8 +246,8 @@ footer {
         border-radius: 25px 25px 0px 0px;
         width: 330px;
         height: 320px;
-        margin-left: -3.5vh;
-        margin-top: -13vh;
+        margin-left: -0.1vh;
+        margin-top: 0.2vh;
        }
 
     /* Cabeçalho */
@@ -267,12 +268,12 @@ footer {
         background: rgba(0, 0, 0, 0.7);
         width: 100%;
         height: 138px;
-        margin-bottom: -260px;
+        margin-bottom: -290px;
     }
 
     /* Banner */
     main {
-        height: 90vh;
+        height: 70vh;
     }
 
     main h1 {
@@ -292,12 +293,20 @@ footer {
         max-width: 720px;
     }
 
+
     /* Cabeçalho */
     header {
         max-width: 100%;
         height: 100px;
         background-color: #000000;
     }
+    .Card img {
+        border-radius: 25px 25px 0px 0px;
+        width: 330px;
+        height: 320px;
+        margin-left: -0.1vh;
+        margin-top: -0.1vh;
+       }
     .Banner .Container h1 {
         color: var(--brancoLayout);
         font-size: 3em;
@@ -318,7 +327,11 @@ footer {
         width: 100%;
         height: 138px;
         margin-bottom: 337px;
+    }/* Banner */
+    main {
+        height: 50vh;
     }
+
 
     label {
         font-size: 4em;
@@ -327,7 +340,7 @@ footer {
     }
 
     #logo img {
-        width: 70px;
+        width: 50px;
         height: 70px;
         margin: 20px 0px 0px 0px;
         margin-left:30px;
@@ -380,6 +393,14 @@ footer {
     /* Layout */
     .Container {
         max-width:100%;
+    }  .Banner {
+        position: absolute;
+        display: block;
+        bottom: 391px;
+        background: rgba(0, 0, 0, 0.7);
+        width: 100%;
+        height: 200px;
+        margin-bottom: 80px;
     }
 
     /* Cabeçalho */
@@ -388,6 +409,13 @@ footer {
         height: 125px;
         background-color: chocolate;
     }
+    .Card img {
+        border-radius: 25px 25px 0px 0px;
+        width: 330px;
+        height: 315px;
+        margin-left: -0.1vh;
+        margin-top: -0.1vh;
+       }
 
     #logo img {
         width: 424px;
