--- a/style.css
+++ b/style.css
@@ -46,11 +46,18 @@ section {
     margin: 0 auto;
     display: flex;
     justify-content: center;
+    margin-top: -25vh;
+    
 }
 
 .Container {
     margin: 0 auto;
     padding: 50px 15px 50px 15px;
+    margin-top: 1vh;
+}
+
+.color {
+    background-color: #d9d9d9;
 }
 
 .Flex,
@@ -99,6 +106,7 @@ margin-left: 3px;
     background-color: #6f6f6f;
 }
 
+
 .Button {
     text-decoration: none;
     background-color: var(--cinzaTexto);
@@ -122,6 +130,11 @@ margin-left: 3px;
 /*<<<<<<<<<<<<<<<<<<<< LAYOUT */
 
 /* Banner*/
+
+.MiniBorda {
+    display: none;
+}
+
 .Banner {
     position: absolute;
     display: block;
@@ -150,25 +163,17 @@ main {
     font-family: "Bebas Neue";
     margin-top: 15px;
 }
-/* Estilos para a imagem e o texto lado a lado */
-.ImageAndText {
-    display: flex;
-    align-items: center;
-}
 
 /* Estilos para a imagem */
 .ImageAndText img {
-    width: 200px; /* Ajuste conforme necessário */
-    height: auto;
-    border-radius: 50%; /* Isso arredonda a imagem */
-    margin-right: 20px; /* Espaço entre a imagem e o texto */
-    text-align: justify; /* Justifica o texto */
+    justify-content: center;
+    border-radius: 55%; /* Isso arredonda a imagem */
+    margin-top:33px;
 }
 
 /* Estilos para o texto ao lado da imagem */
 .TextBesideImage {
-    text-align: left; /* Alinha o texto à esquerda */
-    margin-top: 35px; /* Espaçamento superior */
+    margin-top: 25px; /* Espaçamento superior */
     
 }
 
@@ -203,7 +208,8 @@ header {
 
 /*introduçao*/
 #intro h2 {
-    margin-bottom: 25px;
+    margin-bottom: 3px;
+    margin-top: 100px;
 }
 
 #intro ul li {
@@ -284,6 +290,12 @@ footer {
         margin-left: -0.1vh;
         margin-top: 0.2vh;
        }
+       /*introduçao*/
+#intro h2 {
+    margin-bottom: 3px;
+    margin-top: 20px;
+}
+
 
     /* Cabeçalho */
     header {
@@ -327,6 +339,12 @@ footer {
     .Container {
         max-width: 720px;
     }
+    /*introduçao*/
+#intro h2 {
+    margin-bottom: 3px;
+    margin-top: 130px;
+}
+
 
 
     /* Cabeçalho */
@@ -436,7 +454,68 @@ footer {
 /* PCs ou notebooks HD >>>>>>>>>>>>>>>> */
 @media (min-width: 1200px) {
 
+    /* Parte do Conteudo do Home */
+    .Container-h {
+        display: flex;
+        flex-direction: row;
+        margin-top: 250px;
+        margin-bottom: 50px;
+
+        justify-content: space-around;
+    }
+    .conteudo img {
+        width: auto;
+        border-radius: 20px;
+        height: 40vh;
+        margin: 0 250px 0 50px;
+    }
+
+    .conteudo-texto  h2{
+        color: #ff0000;
+        text-align: left;
+        width: 500px;
+        margin-bottom: 40px;
+        font-family:unset;
+    }
+
+    .button {
+        background-color: #989898;
+        transition: .5s;
+        color: white;
+        border: none;
+        border-radius: 19px;
+        padding: 10px 30px;
+        font-size: 17px;
+        cursor: pointer;
+        text-decoration: none;
+    }
+    
+    .button:hover {
+        transition: .5s;
+        background-color: #6f6f6f;
+    }
     /* Layout */
+    .MiniBorda {
+        display: flex;
+       
+        margin-top: auto;
+        max-width: 100%;
+        background-color:#1e1c1c;
+        padding: 50px 0;
+    }
+    .MiniBanner h2 {
+        text-align: center;
+        color: rgb(255, 255, 255);
+        font-size: 30px;
+        margin-bottom: 15px;
+    }
+    .MiniBanner ul li {
+        width: 1200px;
+        color: rgb(255, 255, 255);
+        font-size: 20px;
+        font-family:sans-serif
+    }
+
     .Container {
         max-width:100%;
     }  .Banner {
@@ -446,7 +525,7 @@ footer {
         background: rgba(0, 0, 0, 0.7);
         width: 100%;
         height: 200px;
-        margin-bottom: 80px;
+        margin-bottom: 42px;
     }
 
     /* Cabeçalho */
