--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /**
  Folha de estilo do site roboticapratica.com
  @author Thiago porfirio malagolin
@@ -47,7 +46,7 @@ section {
     display: flex;
     justify-content: center;
     margin-top: -25vh;
-    
+
 }
 
 .Container {
@@ -57,7 +56,7 @@ section {
 }
 
 .color {
-    background-color: #d9d9d9;
+    background-color: #808080;
 }
 
 .Flex,
@@ -65,31 +64,33 @@ section {
     display: flex;
     justify-content: space-between;
 }
+
 /* Estilos para o Card */
 .Card {
-margin-top: 30px;
-width: 338px;
-height:550px;
-background-color: #e8e8e8;
-border: 2px solid var(--cinzaTexto);
-border-radius: 30px;
-text-align:center;
-margin-left: 3px;
+    margin-top: 30px;
+    width: 338px;
+    height: 550px;
+    background-color: #e8e8e8;
+    border: 2px solid var(--cinzaTexto);
+    border-radius: 30px;
+    text-align: center;
+    margin-left: 3px;
 }
 
 .Card img {
- border-radius: 25px 25px 0px 0px;
- width: 330px;
- height: 320px;
- margin-left: -0.2vh;
- margin-top: 0.2vh;
+    border-radius: 25px 25px 0px 0px;
+    width: 330px;
+    height: 320px;
+    margin-left: -0.2vh;
+    margin-top: 0.2vh;
 }
 
 .Card p {
     padding: 10px 30px 50px 15px;
-    text-align:center;
+    text-align: center;
     color: var(--cinzaLayout);
 }
+
 /* Estilos para o botão no Card */
 .Card button {
     background-color: #989898;
@@ -99,7 +100,7 @@ margin-left: 3px;
     padding: 10px 20px;
     font-size: 17px;
     cursor: pointer;
-    
+
 }
 
 .Card button:hover {
@@ -144,19 +145,22 @@ margin-left: 3px;
     height: 138px;
     margin-bottom: 1px;
 }
+
 main {
     background: url(img/banner.jpg);
-    height: 50vh;
+    height: 70vh;
     background-size: cover;
     background-position: center;
     text-align: center;
 }
+
 .Banner .Container h1 {
     color: var(--brancoLayout);
     font-size: 2.7em;
-    font-family:monospace;
+    font-family: monospace;
     margin-top: -10px;
 }
+
 .Banner .Container h2 {
     color: var(--brancoLayout);
     font-size: 0.9em;
@@ -165,37 +169,60 @@ main {
 }
 
 /* Estilos para a imagem */
+
+.conteudo img {
+    display: none;
+}
+
+.conteudo-texto h2 {
+    display: none;
+
+
+}
+
+#fundo1 {
+    display: none;
+}
+
 .ImageAndText img {
     justify-content: center;
-    border-radius: 55%; /* Isso arredonda a imagem */
-    margin-top:33px;
+    border-radius: 55%;
+    /* Isso arredonda a imagem */
+    margin-top: 33px;
 }
 
 /* Estilos para o texto ao lado da imagem */
 .TextBesideImage {
-    margin-top: 25px; /* Espaçamento superior */
-    
+    margin-top: 25px;
+    /* Espaçamento superior */
+
 }
 
 
 .TextBesideImage h2 {
-    font-size: 22px; /* Ajuste conforme necessário */
-    margin-bottom: 5px; /* Espaçamento inferior */
+    font-size: 22px;
+    /* Ajuste conforme necessário */
+    margin-bottom: 5px;
+    /* Espaçamento inferior */
 }
 
 .TextBesideImage p {
-    font-size: 16px; /* Ajuste conforme necessário */
-    margin-bottom: 20px; /* Espaçamento inferior */
-    font-family:inherit;
+    font-size: 16px;
+    /* Ajuste conforme necessário */
+    margin-bottom: 20px;
+    /* Espaçamento inferior */
+    font-family: inherit;
 }
 
 
 ul li {
-    padding-top: 10px; /* Adiciona espaço acima de cada item da lista */
-    padding-bottom: 17px; /* Adiciona espaço abaixo de cada item da lista */
-    font-family:initial;
+    padding-top: 10px;
+    /* Adiciona espaço acima de cada item da lista */
+    padding-bottom: 17px;
+    /* Adiciona espaço abaixo de cada item da lista */
+    font-family: initial;
     font-size: 22px;
-    
+
 }
 
 /* fim do banner*/
@@ -213,8 +240,8 @@ header {
 }
 
 #intro ul li {
-padding-left: 0px;
-margin-left: 15px;
+    padding-left: 0px;
+    margin-left: 15px;
 }
 
 #logo img {
@@ -283,53 +310,43 @@ footer {
     .Container {
         max-width: 540px;
     }
+
     .Card img {
         border-radius: 25px 25px 0px 0px;
         width: 330px;
         height: 320px;
         margin-left: -0.1vh;
         margin-top: 0.2vh;
-       }
-       /*introduçao*/
-#intro h2 {
-    margin-bottom: 3px;
-    margin-top: 20px;
+    }
+
+    /*introduçao*/
+    #intro h2 {
+        margin-bottom: 3px;
+        margin-top: 20px;
+    }
 }
 
 
-    /* Cabeçalho */
-    header {
-        max-width: 100%;
-        margin: 0 auto;
-    }
+/* Cabeçalho */
+header {
+    max-width: 100%;
+    margin: 0 auto;
+}
 
-    .Flex {
-        flex-direction: row-reverse;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .Banner {
-        position: absolute;
-        display: block;
-        bottom: 450px;
-        background: rgba(0, 0, 0, 0.7);
-        width: 100%;
-        height: 138px;
-        margin-bottom: -290px;
-    }
+.Flex {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+}
 
-    /* Banner */
-    main {
-        height: 70vh;
-    }
-
-    main h1 {
-        font-size: 2.0em;
-    }
-
-    main h2 {
-        margin-bottom: 25px;
-    }
+.Banner {
+    position: absolute;
+    display: block;
+    bottom: 450px;
+    background: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 138px;
+    margin-bottom: -290px;
 }
 
 /* Tablet portrait >>>>>>>>>>>>>>>>>>>> */
@@ -339,11 +356,12 @@ footer {
     .Container {
         max-width: 720px;
     }
+
     /*introduçao*/
-#intro h2 {
-    margin-bottom: 3px;
-    margin-top: 130px;
-}
+    #intro h2 {
+        margin-bottom: 3px;
+        margin-top: 130px;
+    }
 
 
 
@@ -353,25 +371,29 @@ footer {
         height: 100px;
         background-color: #000000;
     }
+
     .Card img {
         border-radius: 25px 25px 0px 0px;
         width: 330px;
         height: 320px;
         margin-left: -0.1vh;
         margin-top: -0.1vh;
-       }
+    }
+
     .Banner .Container h1 {
         color: var(--brancoLayout);
         font-size: 3em;
-        font-family:monospace;
+        font-family: monospace;
         margin-top: -20px;
     }
+
     .Banner .Container h2 {
         color: var(--brancoLayout);
         font-size: 1.5em;
-        font-family:monospace;
+        font-family: monospace;
         margin-top: 15px;
     }
+
     .Banner {
         position: absolute;
         display: block;
@@ -380,9 +402,11 @@ footer {
         width: 100%;
         height: 138px;
         margin-bottom: 337px;
-    }/* Banner */
+    }
+
+    /* Banner */
     main {
-        height: 50vh;
+        height: 53vh;
     }
 
 
@@ -396,12 +420,15 @@ footer {
         width: 80px;
         height: 80px;
         margin: 20px 0px 0px 0px;
-        margin-left:40px;
+        margin-left: 40px;
     }
+
     .TextBesideImage p {
-        font-size: 16px; /* Ajuste conforme necessário */
-        margin-bottom: 40px; /* Espaçamento inferior */
-        font-family:inherit;
+        font-size: 16px;
+        /* Ajuste conforme necessário */
+        margin-bottom: 40px;
+        /* Espaçamento inferior */
+        font-family: inherit;
     }
 
     nav ul {
@@ -429,6 +456,7 @@ footer {
     .Container {
         max-width: 960px;
     }
+
     .Banner {
         position: absolute;
         display: block;
@@ -438,11 +466,14 @@ footer {
         height: 138px;
         margin-bottom: 80px;
     }
+
     /* Estilos para o texto ao lado da imagem */
     .TextBesideImage p {
-        font-size: 16px; /* Ajuste conforme necessário */
-        margin-bottom: 80px; /* Espaçamento inferior */
-        font-family:inherit;
+        font-size: 16px;
+        /* Ajuste conforme necessário */
+        margin-bottom: 80px;
+        /* Espaçamento inferior */
+        font-family: inherit;
     }
 
     /* Cabeçalho */
@@ -461,27 +492,46 @@ footer {
         margin-top: 250px;
         margin-bottom: 50px;
 
-        justify-content: space-around;
+        justify-content: space-between;
     }
+
+    main {
+        background: url(img/banner.jpg);
+        height: 65vh;
+        background-size: cover;
+        background-position: center;
+        text-align: center;
+    }
+
     .conteudo img {
+        display: flex;
         width: auto;
         border-radius: 20px;
         height: 40vh;
-        margin: 0 250px 0 50px;
+        margin: 0 25px 0 50px;
+        margin-right: 10vh;
     }
 
-    .conteudo-texto  h2{
-        color: #ff0000;
+    .conteudo-texto h2 {
+        display: flex;
+        color: #030303;
         text-align: left;
-        width: 500px;
-        margin-bottom: 40px;
-        font-family:unset;
+        width: 600px;
+        margin-bottom: 25px;
+        font-family: unset;
+        margin-right: 56vh;
+        font-size: 22px;
+    }
+
+    #fundo1 {
+
+        display: block;
     }
 
     .button {
-        background-color: #989898;
+        background-color: #000000;
         transition: .5s;
-        color: white;
+        color: rgb(255, 255, 255);
         border: none;
         border-radius: 19px;
         padding: 10px 30px;
@@ -489,36 +539,41 @@ footer {
         cursor: pointer;
         text-decoration: none;
     }
-    
+
     .button:hover {
         transition: .5s;
-        background-color: #6f6f6f;
+        background-color: #626262;
     }
+
     /* Layout */
     .MiniBorda {
         display: flex;
-       
+
         margin-top: auto;
         max-width: 100%;
-        background-color:#1e1c1c;
+        background-color: #1e1c1c;
         padding: 50px 0;
     }
+
     .MiniBanner h2 {
         text-align: center;
         color: rgb(255, 255, 255);
         font-size: 30px;
         margin-bottom: 15px;
     }
+
     .MiniBanner ul li {
         width: 1200px;
         color: rgb(255, 255, 255);
         font-size: 20px;
-        font-family:sans-serif
+        font-family: sans-serif
     }
 
     .Container {
-        max-width:100%;
-    }  .Banner {
+        max-width: 100%;
+    }
+
+    .Banner {
         position: absolute;
         display: block;
         bottom: 391px;
@@ -534,13 +589,14 @@ footer {
         height: 125px;
         background-color: chocolate;
     }
+
     .Card img {
         border-radius: 25px 25px 0px 0px;
-        width: 330px;
+        width: 30px;
         height: 315px;
         margin-left: -0.1vh;
         margin-top: -0.1vh;
-       }
+    }
 
     #logo img {
         width: 424px;
