--- a/style.css
+++ b/style.css
@@ -130,20 +130,104 @@ section {
 
 /*<<<<<<<<<<<<<<<<<<<< LAYOUT */
 
+
+
+/* Parte do Conteudo do Home */
+.Container-h {
+    display: flex;
+    flex-direction: column;
+    margin-top: 250px;
+    margin-bottom: 50px;
+    justify-content: space-between;
+}
+
+.conteudo {
+    display: flex;
+    justify-content: center;
+    margin-top: -50px;
+}
+
+.conteudo img {
+    width: 300px;
+    height: auto;
+    border-radius: 2px;
+}
+
+.conteudo-texto {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.conteudo-texto h2 {
+    font-size: 1em;
+    padding: 15px 20px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+/* Botão do home */
+
+.button {
+    background-color: #000000;
+    text-align: center;
+    margin: 5px 0 0 109px;
+    width: 150px;
+    transition: .5s;
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 19px;
+    padding: 10px 10px;
+    font-size: 1.2em;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+
+/* Layout */
+.MiniBorda {
+    display: flex;
+    margin-top: auto;
+    max-width: 100%;
+    background-color: #1e1c1c;
+    padding: 50px 0;
+}
+
+.MiniBanner h2 {
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+
+.MiniBanner ul li {
+    width: 310px;
+    color: rgb(255, 255, 255);
+    font-size: 1em;
+    font-family: sans-serif;
+}
+
+
 /* Banner*/
 
-.MiniBorda {
-    display: none;
+.Container {
+    max-width: 100%;
 }
 
 .Banner {
     position: absolute;
     display: block;
-    bottom: 450px;
+    bottom: 440px;
     background: rgba(0, 0, 0, 0.7);
     width: 100%;
-    height: 138px;
-    margin-bottom: 1px;
+    height: 105px;
+}
+
+.Banner .Container h1 {
+    color: var(--brancoLayout);
+    font-size: 2.7em;
+    font-family: monospace;
+
 }
 
 main {
@@ -158,7 +242,7 @@ main {
     color: var(--brancoLayout);
     font-size: 2.7em;
     font-family: monospace;
-    margin-top: -10px;
+    margin-top: -45px;
 }
 
 .Banner .Container h2 {
@@ -169,20 +253,6 @@ main {
 }
 
 /* Estilos para a imagem */
-
-.conteudo img {
-    display: none;
-}
-
-.conteudo-texto h2 {
-    display: none;
-
-
-}
-
-#fundo1 {
-    display: none;
-}
 
 .ImageAndText img {
     justify-content: center;
@@ -306,9 +376,33 @@ footer {
 /* Smartphone landscape >>>>>>>>>>>>>>> */
 @media (min-width: 576px) {
 
-    /* Layout */
     .Container {
         max-width: 540px;
+    }
+
+    /* Botão do home */
+
+    .button {
+        margin: 5px 0 0 250px;
+    }
+
+    /* Layout */
+
+    .Banner {
+        position: absolute;
+        display: block;
+        bottom: 450px;
+        background: rgba(0, 0, 0, 0.7);
+        width: 100%;
+        height: 138px;
+        margin-bottom: -270px;
+    }
+
+    .Banner .Container h1 {
+        color: var(--brancoLayout);
+        font-size: 2.7em;
+        font-family: monospace;
+        bottom: auto;
     }
 
     .Card img {
@@ -326,6 +420,67 @@ footer {
     }
 }
 
+/* Parte do Conteudo do Home */
+.Container-h {
+    display: flex;
+    flex-direction: column;
+    margin-top: 250px;
+    margin-bottom: 50px;
+    justify-content: space-between;
+}
+
+.conteudo {
+    display: flex;
+    justify-content: center;
+    margin-top: -85px;
+}
+
+.conteudo img {
+    width: 300px;
+    height: auto;
+    border-radius: 25px;
+}
+
+.conteudo-texto {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.conteudo-texto h2 {
+    font-size: 1em;
+    padding: 15px 20px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+
+
+
+/* Layout */
+.MiniBorda {
+    display: flex;
+    margin-top: auto;
+    max-width: 100%;
+    background-color: #1e1c1c;
+    padding: 50px 0;
+}
+
+.MiniBanner h2 {
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+
+.MiniBanner ul li {
+    width: 310px;
+    color: rgb(255, 255, 255);
+    font-size: 1em;
+    font-family: sans-serif;
+}
+
+
 
 /* Cabeçalho */
 header {
@@ -339,15 +494,7 @@ header {
     align-items: center;
 }
 
-.Banner {
-    position: absolute;
-    display: block;
-    bottom: 450px;
-    background: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    height: 138px;
-    margin-bottom: -290px;
-}
+
 
 /* Tablet portrait >>>>>>>>>>>>>>>>>>>> */
 @media (min-width: 768px) {
@@ -361,6 +508,65 @@ header {
     #intro h2 {
         margin-bottom: 3px;
         margin-top: 130px;
+    }
+
+    /* Botão do home */
+
+    .button {
+        background-color: #000000;
+        text-align: center;
+        margin: 5px 0 0 310px;
+        width: 150px;
+        transition: .5s;
+        color: rgb(255, 255, 255);
+        border: none;
+        border-radius: 19px;
+        padding: 15px 20px;
+        font-size: 1.2em;
+        cursor: pointer;
+        text-decoration: none;
+    }
+
+    .MiniBanner ul li {
+        width: 720px;
+        color: rgb(255, 255, 255);
+        font-size: 15px;
+        font-family: sans-serif
+    }
+
+    /* Parte do Conteudo do Home */
+    .Container-h {
+        display: flex;
+        flex-direction: column;
+        margin-top: 250px;
+        margin-bottom: 30px;
+        justify-content: space-between;
+    }
+
+    .conteudo {
+        display: flex;
+        justify-content: center;
+        margin-top: -50px;
+    }
+
+    .conteudo img {
+        width: 300px;
+        height: auto;
+        margin-top: 65px;
+        border-radius: 25px;
+    }
+
+    .conteudo-texto {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .conteudo-texto h2 {
+        font-size: 20px;
+        padding: 15px 20px;
+        margin-top: 5px;
+        margin-bottom: 20px;
     }
 
 
@@ -397,7 +603,7 @@ header {
     .Banner {
         position: absolute;
         display: block;
-        bottom: 450px;
+        bottom: 460px;
         background: rgba(0, 0, 0, 0.7);
         width: 100%;
         height: 138px;
@@ -467,6 +673,30 @@ header {
         margin-bottom: 80px;
     }
 
+    /* Botão do home */
+
+    .button {
+        background-color: #000000;
+        text-align: center;
+        margin: 5px 0 0 150px;
+        width: 150px;
+        transition: .5s;
+        color: rgb(255, 255, 255);
+        border: none;
+        border-radius: 19px;
+        padding: 15px 20px;
+        font-size: 1.2em;
+        cursor: pointer;
+        text-decoration: none;
+    }
+
+    .MiniBanner ul li {
+        width: 985px;
+        color: rgb(255, 255, 255);
+        font-size: 15px;
+        font-family: sans-serif
+    }
+
     /* Estilos para o texto ao lado da imagem */
     .TextBesideImage p {
         font-size: 16px;
@@ -475,6 +705,41 @@ header {
         /* Espaçamento inferior */
         font-family: inherit;
     }
+
+    /* Parte do Conteudo do Home */
+    .Container-h {
+        display: flex;
+        flex-direction: column;
+        margin-top: 250px;
+        margin-bottom: 50px;
+        justify-content: space-between;
+    }
+
+    .conteudo {
+        display: flex;
+        justify-content: center;
+        margin-top: -50px;
+    }
+
+    .conteudo img {
+        width: 300px;
+        height: auto;
+        border-radius: 25px;
+    }
+
+    .conteudo-texto {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .conteudo-texto h2 {
+        font-size: 20px;
+        padding: 15px 20px;
+        margin-top: 5px;
+        margin-bottom: 20px;
+    }
+
 
     /* Cabeçalho */
     header {
@@ -503,6 +768,7 @@ header {
         text-align: center;
     }
 
+
     .conteudo img {
         display: flex;
         width: auto;
@@ -521,6 +787,14 @@ header {
         font-family: unset;
         margin-right: 56vh;
         font-size: 22px;
+    }
+
+    .Flex {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
     }
 
     #fundo1 {
