--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
     margin: 0;
-    /* Adicionado para garantir que o corpo não tenha margem */
+    /* Adicionado para garantir que o corpo não tenha margem 
     padding: 0;
     /* Adicionado para garantir que o corpo não tenha preenchimento */
 }
@@ -175,9 +175,8 @@ input[type="reset"] {
 }
 
 .conteudo-texto {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    font-size: 1.2em;
+    
 }
 
 .conteudo-texto h2 {
@@ -185,6 +184,21 @@ input[type="reset"] {
     padding: 15px 20px;
     margin-top: 5px;
     margin-bottom: 20px;
+}
+.buttonP {
+    background-color: #000000;
+    text-align: center;
+    margin: 5px 0 0 109px;
+    width: 150px;
+    transition: .5s;
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 25px;
+    padding: 3px 1px;
+    font-size: 1em;
+    cursor: pointer;
+    text-decoration: none;
+    margin-top: 25px;
 }
 
 /* Botão do home */
@@ -234,6 +248,10 @@ input[type="reset"] {
 .Container {
     max-width: 100%;
 }
+#Pretxt {
+
+    font-family:inherit;
+}
 
 .Banner {
     position: absolute;
@@ -258,15 +276,16 @@ form {
     margin-top: -220px;
   }
   .Container9 h2{
-    margin-bottom: 250px;
+    margin-bottom: 230px;
     font-size:4vh;
+    margin-left: 20px;
    
     
   }
 
 main {
     background: url(img/banner.jpg);
-    height: 70vh;
+    height:45vh;
     background-size: cover;
     background-position: center;
     text-align: center;
@@ -295,8 +314,8 @@ main {
     width: 130px;
     height: auto;
     margin: 0 30px;
-    margin-left: -0.8px;
-    margin-top: 30px;
+    margin-left: -6px;
+    margin-top: 39px;
 }
 
 /* Estilos para o texto ao lado da imagem */
@@ -321,8 +340,8 @@ main {
 .texto-sobre p {
     font-size: 1.1em;
     font-family:serif;
-    width: 260px;
-    margin-left: -22px;
+    width: 220px;
+    margin-left: -27px;
 }
 
 
@@ -436,6 +455,36 @@ footer {
     height: auto;
     margin: 0 30px;
 }
+main {
+    background: url(img/banner.jpg);
+    height:80vh;
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+}
+.buttonP {
+    background-color: #000000;
+    text-align: center;
+    margin: 5px 0 0 260px;
+    width: 150px;
+    transition: .5s;
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 19px;
+    padding: 10px 10px;
+    font-size: 1.2em;
+    cursor: pointer;
+    text-decoration: none;
+    margin-top: 25px;
+}
+
+.Flex {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
 
 /* Estilos para o texto ao lado da imagem */
 .sobre-mim{
@@ -456,6 +505,7 @@ form {
   .Container9 h2{
     margin-bottom: 250px;
     font-size:7vh;
+    margin-left: 150px;
     
   }
 .texto-sobre h2 {
@@ -517,7 +567,7 @@ form {
 .conteudo {
     display: flex;
     justify-content: center;
-    margin-top: -135px;
+    margin-top: -220px;
 }
 
 .conteudo img {
@@ -588,37 +638,45 @@ header {
     .Container {
         max-width: 720px;
     }
-
-    /*introduçao*/
-    #intro h2 {
-        margin-bottom: 3px;
-        margin-top: 130px;
-    }
-
-    /* Botão do home */
-
-    .button {
+    form {
+        background-color:var(--cinzaTexto);
+        padding: 20px;
+        border-radius: 50px;
+        box-shadow: rgb(156, 156, 156) 0px 3px 8px;
+        margin-top: -220px;
+      }
+      .Container9 h2{
+        margin-bottom: 230px;
+        font-size:4vh;
+        margin-left: 120px; 
+      }
+      /* Botão do home */
+      .buttonP {
         background-color: #000000;
         text-align: center;
-        margin: 5px 0 0 310px;
+        margin: 5px 0 0 305px;
         width: 150px;
         transition: .5s;
         color: rgb(255, 255, 255);
         border: none;
         border-radius: 19px;
-        padding: 15px 20px;
+        padding: 10px 10px;
         font-size: 1.2em;
         cursor: pointer;
         text-decoration: none;
+        margin-top: 25px;
     }
-
+    /*introduçao*/
+    #intro h2 {
+        margin-bottom: 3px;
+        margin-top: 130px;
+    }
     .MiniBanner ul li {
         width: 720px;
         color: rgb(255, 255, 255);
         font-size: 15px;
         font-family: sans-serif
     }
-
     /* Parte do Conteudo do Home */
     .Container-h {
         display: flex;
@@ -627,17 +685,15 @@ header {
         margin-bottom: 30px;
         justify-content: space-between;
     }
-
     .conteudo {
         display: flex;
         justify-content: center;
-        margin-top: -50px;
+        margin-top: -290px;
     }
 
     .conteudo img {
         width: 300px;
-        height: auto;
-        margin-top: 65px;
+        margin-top: 10px;
         border-radius: 25px;
     }
 
@@ -697,7 +753,7 @@ header {
 
     /* Banner */
     main {
-        height: 53vh;
+        height: 40vh;
     }
 
 
@@ -757,6 +813,35 @@ header {
         height: 138px;
         margin-bottom: 80px;
     }
+         /* Botão do home */
+         .buttonP {
+            background-color: #000000;
+            text-align: center;
+            margin: 5px 0 0 440px;
+            width: 150px;
+            transition: .5s;
+            color: rgb(255, 255, 255);
+            border: none;
+            border-radius: 19px;
+            padding: 10px 10px;
+            font-size: 1.2em;
+            cursor: pointer;
+            text-decoration: none;
+            margin-top: 25px;
+        }
+    form {
+        background-color:var(--cinzaTexto);
+        padding: 20px;
+        border-radius: 50px;
+        box-shadow: rgb(156, 156, 156) 0px 3px 8px;
+        margin-top: -220px;
+      }
+      .Container9 h2{
+        margin-bottom: 230px;
+        font-size:5vh;
+        margin-left:280px; 
+      }
+
 
     /* Botão do home */
 
@@ -803,13 +888,14 @@ header {
     .conteudo {
         display: flex;
         justify-content: center;
-        margin-top: -50px;
+        margin-top: -200px;
     }
 
     .conteudo img {
         width: 300px;
         height: auto;
-        border-radius: 25px;
+        margin-bottom: 100px;
+        
     }
 
     .conteudo-texto {
@@ -821,7 +907,7 @@ header {
     .conteudo-texto h2 {
         font-size: 20px;
         padding: 15px 20px;
-        margin-top: 5px;
+        margin-top: -300px;
         margin-bottom: 20px;
     }
 
@@ -844,6 +930,19 @@ header {
 
         justify-content: space-between;
     }
+    form {
+        background-color:var(--cinzaTexto);
+        padding: 20px;
+        border-radius: 50px;
+        box-shadow: rgb(156, 156, 156) 0px 3px 8px;
+        margin-top: -220px;
+      }
+      .Container9 h2{
+        margin-bottom: 230px;
+        font-size:4vh;
+        margin-left: 600px; 
+      }
+
 
     main {
         background: url(img/banner.jpg);
