--- a/style.css
+++ b/style.css
@@ -48,6 +48,16 @@ section {
     margin-top: -25vh;
 
 }
+.MiniBanner ul li {
+    width: 340px;
+    color: rgb(255, 255, 255);
+    font-size: 1em;
+    font-family: sans-serif;
+}
+#txtP{
+    color: #989898;
+}
+
 
 .Container {
     margin: 0 auto;
@@ -63,6 +73,17 @@ section {
 .FlexMenu {
     display: flex;
     justify-content: space-between;
+}
+.MiniBanner1 ul li {
+    width:350px;
+    color: rgb(0, 0, 0);
+    font-size: 1.1em;
+    font-family: sans-serif;
+    margin-left: 29px;
+}
+.conteudo-texto img{
+   width: 150px;
+   margin-left: 110px;
 }
 
 /* Estilos para o Card */
@@ -118,6 +139,9 @@ textarea {
   border: 1px solid #2e2e2e;
   border-radius: 5px;
 }
+.conteudo-texto h2.txtA{
+    margin-left:85px;
+}
 
 input[type="submit"],
 input[type="reset"] {
@@ -127,6 +151,7 @@ input[type="reset"] {
   border-radius: 10px;
   cursor: pointer;
 }
+
 
 
 .Button {
@@ -227,22 +252,6 @@ input[type="reset"] {
     background-color: #1e1c1c;
     padding: 50px 0;
 }
-
-.MiniBanner h2 {
-    text-align: center;
-    color: rgb(255, 255, 255);
-    font-size: 30px;
-    margin-bottom: 15px;
-}
-
-.MiniBanner ul li {
-    width: 310px;
-    color: rgb(255, 255, 255);
-    font-size: 1em;
-    font-family: sans-serif;
-}
-
-
 /* Banner*/
 
 .Container {
@@ -259,7 +268,7 @@ input[type="reset"] {
     bottom: 440px;
     background: rgba(0, 0, 0, 0.7);
     width: 100%;
-    height: 145px;
+    height: 105px;
 }
 
 .Banner .Container h1 {
@@ -435,10 +444,31 @@ footer {
 
 /* Smartphone landscape >>>>>>>>>>>>>>> */
 @media (min-width: 576px) {
+    .MiniBanner1 ul li {
+        width:600px;
+        color: rgb(0, 0, 0);
+        font-size: 1.1em;
+        font-family: sans-serif;
+    }
 
     .Container {
         max-width: 540px;
     }
+    .conteudo-texto1 h2{
+        font-size: 1.2em;
+        margin-left: 250px;
+
+    }
+    .conteudo-texto1 img{
+        width: 200px;
+        margin-left: 230px;
+        margin-top: 5px;
+     }
+   
+    .conteudo-texto img{
+        width: 200px;
+        margin-left: 240px;
+     }
 
     /* Botão do home */
 
@@ -455,6 +485,16 @@ footer {
     height: auto;
     margin: 0 30px;
 }
+.MiniBanner ul li {
+    width: 570px;
+    color: rgb(255, 255, 255);
+    font-size: 1em;
+    font-family: sans-serif;
+}
+#SS{
+    margin-left: 100PX;
+    margin-right: 1000PX;
+} 
 main {
     background: url(img/banner.jpg);
     height:80vh;
@@ -521,6 +561,7 @@ form {
     width: 400px;
 }
 
+
     /* Layout */
 
     .Banner {
@@ -529,7 +570,7 @@ form {
         bottom: 450px;
         background: rgba(0, 0, 0, 0.7);
         width: 100%;
-        height: 138px;
+        height: 118px;
         margin-bottom: -270px;
     }
 
@@ -580,6 +621,7 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: center;
+   
 }
 
 .conteudo-texto h2 {
@@ -587,7 +629,10 @@ form {
     padding: 15px 20px;
     margin-top: 5px;
     margin-bottom: 20px;
+    font-family:inherit;
+    color: #151515;
 }
+
 
 
 
@@ -600,20 +645,38 @@ form {
     background-color: #1e1c1c;
     padding: 50px 0;
 }
+.MiniBorda1  {
+    display: flex;
+    margin-top: auto;
+    max-width: 100%;
+    background-color: #999999;
+    padding: 50px 0;
+}
+.MiniBanner1 h2 {
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-size: 30px;    
+    margin-bottom: 15px;
+}
 
 .MiniBanner h2 {
     text-align: center;
     color: rgb(255, 255, 255);
-    font-size: 30px;
+    font-size: 30px;    
     margin-bottom: 15px;
 }
 
-.MiniBanner ul li {
-    width: 310px;
-    color: rgb(255, 255, 255);
-    font-size: 1em;
-    font-family: sans-serif;
+
+
+.MiniBanner1 h2.chamativo {
+    background-color: rgba(0, 0, 0, 0.3); /* Cor preta com 50% de opacidade */
+    color: rgb(255, 255, 255); /* Cor do texto branco para contrastar com o fundo preto */
+    padding: 5px; /* Espaçamento interno para o texto */
+    text-align: center; /* Centralizar o texto */
 }
+
+
+
 
 
 
@@ -638,6 +701,26 @@ header {
     .Container {
         max-width: 720px;
     }
+    .MiniBanner1 ul li {
+        width:750px;
+        color: rgb(0, 0, 0);
+        font-size: 1.3em;
+        font-family:sans-serif;
+        margin-left: 29px;
+    }
+    .conteudo-texto h2{
+        font-size: 1.2em;
+     }
+    .conteudo-texto1 img{
+        width: 200px;
+        margin-left: 280px;
+        margin-top: 5px;
+     }
+     .conteudo-texto1 h2{
+        font-size: 1.2em;
+        margin-left: 300px;
+     }
+    
     form {
         background-color:var(--cinzaTexto);
         padding: 20px;
@@ -693,7 +776,7 @@ header {
 
     .conteudo img {
         width: 300px;
-        margin-top: 10px;
+        margin-top: 60px;
         border-radius: 25px;
     }
 
@@ -703,13 +786,7 @@ header {
         justify-content: center;
     }
 
-    .conteudo-texto h2 {
-        font-size: 20px;
-        padding: 15px 20px;
-        margin-top: 5px;
-        margin-bottom: 20px;
-    }
-
+   
 
 
     /* Cabeçalho */
@@ -809,7 +886,7 @@ header {
         display: block;
         bottom: 450px;
         background: rgba(0, 0, 0, 0.7);
-        width: 100%;
+        width:100%;
         height: 138px;
         margin-bottom: 80px;
     }
@@ -893,15 +970,15 @@ header {
 
     .conteudo img {
         width: 300px;
-        height: auto;
-        margin-bottom: 100px;
-        
+        margin-top: 10px;
+        border-radius: 30px;
     }
 
     .conteudo-texto {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        margin-top: 300px;
     }
 
     .conteudo-texto h2 {
@@ -910,8 +987,16 @@ header {
         margin-top: -300px;
         margin-bottom: 20px;
     }
+    .conteudo-texto1 img{
+        width: 200px;
+        margin-left: 420px;
+        margin-top: 5px;
+     }
+     .conteudo-texto1 h2{
+        font-size: 1.2em;
+        margin-left: 440px;
 
-
+    }
     /* Cabeçalho */
     header {
         max-width: 100%;
@@ -930,6 +1015,25 @@ header {
 
         justify-content: space-between;
     }
+    .conteudo-texto {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+       
+    }
+    
+    .conteudo-texto h2 {
+        margin-top: 5px;
+        margin-left: 510px;
+    }
+    .MiniBanner1 ul li {
+        width: 1355px;
+        color: rgb(0, 0, 0);
+        font-size: 1.7em;
+        font-family: sans-serif;
+    }
+    
+    
     form {
         background-color:var(--cinzaTexto);
         padding: 20px;
@@ -961,16 +1065,23 @@ header {
         margin: 0 25px 0 50px;
         margin-right: 10vh;
     }
+    .conteudo-texto {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 0px;
+    }
 
     .conteudo-texto h2 {
         display: flex;
         color: #030303;
         text-align: left;
-        width: 600px;
-        margin-bottom: 25px;
+        width: 900px;
+        margin-left: -170px;
         font-family: unset;
-        margin-right: 56vh;
         font-size: 22px;
+        margin-top: -200px;
+        margin-right: 100px;
     }
 
     .Flex {
@@ -991,6 +1102,7 @@ header {
         font-size: 17px;
         cursor: pointer;
         text-decoration: none;
+        margin-left:5px;
     }
 
     .button:hover {
@@ -1088,7 +1200,8 @@ header {
 }
 
 /* PCs, notebooks ou Tv Full HD + >>>> */
-@media (min-width: 1400px) {
+@media (min-width: 1400px)
+{
 
     /* Cabeçalho */
     header {
