--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ textarea {
 }
 .conteudo-texto h2.txtA{
     margin-left:85px;
+    
 }
 
 input[type="submit"],
@@ -161,6 +162,10 @@ input[type="reset"] {
     border-radius: 25px;
     font-size: 1.2em;
     font-weight: 700;
+}
+.ContainerSobre {
+    margin: 0 auto;
+    padding: 50px 15px 50px 15px;
 }
 
 .Flex {
@@ -187,10 +192,18 @@ input[type="reset"] {
     justify-content: space-between;
 }
 
-.conteudo {
-    display: flex;
-    justify-content: center;
-    margin-top: 90px;
+#conteudo {
+    position: relative; /* Definir posição relativa para que o vídeo possa ser posicionado */
+    width: 100%; /* Definir a largura para ocupar 100% do contêiner */
+    height: auto; /* Definir a altura para se ajustar automaticamente */
+    margin-top: -300px;
+}
+#conteudo video {
+    width: 100%; /* Definir a largura para ocupar 100% do contêiner */
+    height: auto; /* Definir a altura para se ajustar automaticamente */
+    position: relative; /* Definir posição relativa */
+    z-index: 1; /* Definir o índice z para garantir que o vídeo não se sobreponha a outros elementos */
+    margin-top: 95px;
 }
 
 .conteudo img {
@@ -199,16 +212,22 @@ input[type="reset"] {
     border-radius: 2px;
 }
 
+
 .conteudo-texto {
     font-size: 1.2em;
     
 }
+#social {
+    margin-bottom: 25px;
+}
+
 
 .conteudo-texto h2 {
     font-size: 1em;
     padding: 15px 20px;
     margin-top: 5px;
     margin-bottom: 20px;
+    
 }
 .buttonP {
     background-color: #000000;
@@ -225,6 +244,24 @@ input[type="reset"] {
     text-decoration: none;
     margin-top: 25px;
 }
+#imgSobre img{
+    border: 2px solid var(--pretoLayout);
+    border-radius: 50%;
+    margin-top: 150px;
+    
+}
+.FlexSobre {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.ContainerSobre {
+    margin: 0 auto;
+    padding: 50px 15px 50px 15px;
+}
+
 
 /* Botão do home */
 
@@ -312,45 +349,6 @@ main {
     font-size: 0.9em;
     font-family: "Bebas Neue";
     margin-top: 15px;
-}
-
-/* Estilos para a imagem */
-
-.imagem-sobre img {
-    justify-content: center;
-    border-radius: 50%;
-    /* Isso arredonda a imagem */
-    width: 130px;
-    height: auto;
-    margin: 0 30px;
-    margin-left: -6px;
-    margin-top: 39px;
-}
-
-/* Estilos para o texto ao lado da imagem */
-.sobre-mim{
-    margin-top: 50px;
-    display: flex;
-    flex-direction: row;
-    /* Espaçamento superior */
-
-}
-
-
-
-.texto-sobre h2 {
-    font-size: 1.2em;
-    margin-bottom: 10px;
-    
-    
-    /* Ajuste conforme necessário */ 
-}
-
-.texto-sobre p {
-    font-size: 1.1em;
-    font-family:serif;
-    width: 220px;
-    margin-left: -27px;
 }
 
 
@@ -464,6 +462,13 @@ footer {
         margin-left: 230px;
         margin-top: 5px;
      }
+     #imgSobre img{
+        border: 2px solid var(--pretoLayout);
+        border-radius: 50%;
+        margin-top: 60px;
+        margin-right:20px;
+        
+    }
    
     .conteudo-texto img{
         width: 200px;
@@ -476,21 +481,19 @@ footer {
         margin: 5px 0 0 250px;
     }
     /* Estilos para a imagem */
-
-.imagem-sobre img {
-    justify-content: center;
-    border-radius: 50%;
-    /* Isso arredonda a imagem */
-    width: 130px;
-    height: auto;
-    margin: 0 30px;
-}
 .MiniBanner ul li {
     width: 570px;
     color: rgb(255, 255, 255);
     font-size: 1em;
     font-family: sans-serif;
 }
+.FlexSobre {
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    text-align: left; 
+}
+
 #SS{
     margin-left: 100PX;
     margin-right: 1000PX;
@@ -525,15 +528,6 @@ main {
     justify-content: space-between;
     align-items: center;
 }
-
-/* Estilos para o texto ao lado da imagem */
-.sobre-mim{
-    margin-top: 50px;
-    display: flex;
-    flex-direction: row;
-    /* Espaçamento superior */
-
-}
 /* form */
 form {
     background-color:var(--cinzaLayout);
@@ -548,18 +542,6 @@ form {
     margin-left: 150px;
     
   }
-.texto-sobre h2 {
-    font-size: 1.2em;
-    margin-bottom: 5px;
-    
-    /* Ajuste conforme necessário */ 
-}
-
-.texto-sobre p {
-    font-size: 1em;
-    font-family: inherit;
-    width: 400px;
-}
 
 
     /* Layout */
@@ -720,6 +702,14 @@ header {
         font-size: 1.2em;
         margin-left: 300px;
      }
+     #textoSobre h2{
+        margin-left: 24px;
+        font-size: 1.5em;
+        margin-top: 200px;
+    }
+    #textoSobre p{
+        font-size: 1.3em;
+    }
     
     form {
         background-color:var(--cinzaTexto);
@@ -733,6 +723,12 @@ header {
         font-size:4vh;
         margin-left: 120px; 
       }
+      #imgSobre img{
+        border: 2px solid var(--pretoLayout);
+        border-radius: 50%;
+        margin-top: 250px;
+        
+    }
       /* Botão do home */
       .buttonP {
         background-color: #000000;
@@ -767,6 +763,11 @@ header {
         margin-top: 250px;
         margin-bottom: 30px;
         justify-content: space-between;
+    }
+    .FlexSobre {
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
     }
     .conteudo {
         display: flex;
@@ -889,6 +890,11 @@ header {
         width:100%;
         height: 138px;
         margin-bottom: 80px;
+    }
+    .FlexSobre {
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
     }
          /* Botão do home */
          .buttonP {
@@ -1028,20 +1034,10 @@ header {
         justify-content: center;
        
     }
-    .texto-sobre p {
-        font-size: 1.3em;
-        font-family: inherit;
-        width: 490px;
-        margin-top: -20px;
+    .FlexSobre {
+        flex-direction: row;
+        justify-content:space-around;
     }
-    .texto-sobre h2 {
-        font-size: 1.3em;
-        font-family: inherit;
-        width: 490px;
-        margin-top: -30px;
-        margin-bottom: 20px;
-    }
-    
     .conteudo-texto h2 {
         margin-top: 5px;
         margin-left: 510px;
@@ -1051,6 +1047,20 @@ header {
         color: rgb(0, 0, 0);
         font-size: 1.7em;
         font-family: sans-serif;
+    }
+    #conteudo {
+        position: relative; /* Definir posição relativa para que o vídeo possa ser posicionado */
+        width: 100%; /* Definir a largura para ocupar 100% do contêiner */
+        height: auto; /* Definir a altura para se ajustar automaticamente */
+        margin-left: 55px;
+        margin-top: -270px;
+    }
+    #conteudo video {
+        width: 100%; /* Definir a largura para ocupar 100% do contêiner */
+        height: auto; /* Definir a altura para se ajustar automaticamente */
+        position: relative; /* Definir posição relativa */
+        z-index: 1; /* Definir o índice z para garantir que o vídeo não se sobreponha a outros elementos */
+        margin-top: 95px;
     }
     
     
@@ -1096,10 +1106,10 @@ header {
         display: flex;
         color: #000000;
         text-align: left;
-        width: 900px;
-        margin-left: 90px;
+        width: 1000px;
+        margin-left: 20px;
         font-family: unset;
-        font-size: 22px;
+        font-size: 25px;
         margin-top: -200px;
         
     }
@@ -1211,7 +1221,18 @@ header {
     nav ul li a:hover {
         color: rgb(255, 0, 0);
     }
-
+    #textoSobre h2{
+        margin-left: 24px;
+        font-size: 1.5em;
+        margin-top: 260px;
+        
+    }
+    #textoSobre p{
+        font-size: 1.4em;
+        width:400px;
+        
+        
+    }
     /* Banner */
     main h1 {
         font-size: 2em;
